Commit *: Fix a typo in layout - footer.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,7 +16,7 @@
 
     <footer class="footer">
       <div>
-        If you wanto to visit our main page, just click down below
+        If you want to visit our main page, just click down below
         <div class="click">
           <a href="/">Phonebook </a>
           <svg width="30" height="30" viewBox="0 0 24 24">
